<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prezzies</string>
    <string name="action_settings">Settings</string>
    <string name="action_suggest">Suggest a Gift!</string>
    <string name="title_activity_display_product">Display Product</string>
    <string name="title_activity_search_results">Search Results</string>

    <!-- main_activity.xml strings -->
    <string name="heading_main_activity">Let us find the perfect present!</string>
    <string name="tv_gender">Find a present for:</string>
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="age_range">Age Range:</string>
    <string name="price_range">Price Range:</string>
    <string name="btn_text">Find Present</string>
    <string name="suggest_text">Didn\'t find a gift you like?</string>
    <string name="suggest_text2">Suggest a gift to be added to our Database.</string>
    <string name="suggest_btn">Suggest</string>
    <string name="settings_btn">Settings</string>

    <string-array name="age_range_array">
        <item>0 &#8211; 3</item>
        <item>4 &#8211; 6</item>
        <item>7 &#8211; 9</item>
        <item>10 &#8211; 14</item>
        <item>15 &#8211; 18</item>
        <item>19 &#8211; 24</item>
        <item>25 &#8211; 30</item>
        <item>31 &#8211; 40</item>
        <item>41 &#8211; 55</item>
        <item>55+</item>
    </string-array>
    <string-array name="sort_by_array">
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Highest Rating</item>
    </string-array>

    <!-- Product Strings -->

    <string name="test_product_name">Stuffed animal</string>
    <string name="product_price">Price</string>
    <string name="product_price_colon">Price:</string>
    <string name="test_price_value">€15</string>
    <string name="product_description">Description:</string>
    <string name="product_description_value">Blah blah blah</string>
    <string name="open_link">GO TO PRESENT</string>

    <!-- Content Descriptions -->

    <string name="test_content_desc">Picture of a toy</string>
    <string name="logo_content_desc">Logo image</string>
    <string name="static_img_content_desc">Image of a holly border</string>
    <string name="productName">Product Name</string>
    <string name="productPrice">Product Price</string>
    <string name="contentDescription">Description of Image </string>
    <string name="ratingButtonString">Rate Product</string>
    <string name="sortBy">Sort By:</string>

    <!-- Suggest Product -->

    <string name="suggest_product">Suggest a Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description_suggest">Product Description</string>
    <string name="product_gender">Product Gender</string>
    <string name="product_age_range">Product Age Range</string>
    <string name="product_guide_price">Product Guide Price</string>
    <string name="product_link">Product Link</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_suggest_product">SuggestProduct</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Preferences -->
    <string name="soundString">Sound</string>
    <string name="onString">On</string>
    <string name="offString">Off</string>
    <string name="backgroundString">Background</string>
    <string name="reindeerString">Reindeer</string>
    <string name="santaString">Santa</string>
    <string name="snowmanString">Snowman</string>
    <string name="languageString">Language</string>
    <string name="englishString">English</string>
    <string name="frenchString">French</string>
    <string name="saveString">Save</string>
    <string name="cancelString">Cancel</string>
    <string name="settings_head">Settings</string>
    <string name="widgetOpen">View Product</string>
    <string name="title_activity_my_widget_provider">MyWidgetProvider</string>
    <string name="widgetTitle">Gift of the Day</string>

</resources>