<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".SuggestProduct" >

<TableLayout
    android:id="@+id/suggestWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".SuggestProduct"
    android:background="@drawable/reindeer_with_tree_200_trans2">

    <TextView
        android:id="@+id/TextSuggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suggest_product"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Line 1 -->

    <View
        android:id="@+id/line1Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />
    
    <TextView
        android:id="@+id/TextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name" />

    <EditText
        android:id="@+id/P_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 2 -->

    <View
        android:id="@+id/line2Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    
    <TextView
        android:id="@+id/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_description_suggest" />

    <EditText
        android:id="@+id/P_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 3 -->

    <View
        android:id="@+id/line3Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <TextView
        android:id="@+id/TextGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_gender" />
    
    
    <EditText
        android:id="@+id/P_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 4 -->

    <View
        android:id="@+id/line4Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />
    
    <TextView
        android:id="@+id/TextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_age_range" />

    <EditText
        android:id="@+id/P_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 5 -->

    <View
        android:id="@+id/line5Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />
    
    <TextView
        android:id="@+id/TextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_guide_price" />

    <EditText
        android:id="@+id/P_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 6 -->

    <View
        android:id="@+id/line6Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />
    
    <TextView
        android:id="@+id/TextLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_link" />
    
    <EditText
        android:id="@+id/P_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:inputType="text" />
    
     <!-- Line 7 -->
     
     
    <View
        android:id="@+id/line7Sugg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/red_dark"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:onClick="suggestProduct" />

</TableLayout>
</ScrollView>